# study

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
.deps/: search.Po
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
include/: Makefile  Makefile.am  Makefile.in  pub.h
src/: Makefile  Makefile.am  Makefile.in  search.c  sort.c
src/.deps/: search.Po  sort.Po
src/test/search/: Makefile  Makefile.am  Makefile.in  search  search.c
src/test/sort/: Makefile  Makefile.am  Makefile.in  sort  sort.c
src/test/sort/.deps/: search.Po  sort.Po
